ajustado validações do usuário
